<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_md"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/suite_back_button"
            android:layout_width="@dimen/touch_target"
            android:layout_height="@dimen/touch_target"
            android:layout_marginEnd="@dimen/spacing_md"
            android:background="@drawable/mg4_tonal_button"
            android:clickable="true"
            android:contentDescription="@string/cd_back"
            android:focusable="true"
            android:padding="@dimen/spacing_md"
            android:src="@drawable/ic_back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/suite_title"
            android:textAppearance="@style/Text.MG4.Title"
            android:textSize="@dimen/drawer_title_size"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/suite_refresh_button"
            style="@style/Widget.MG4.HeaderButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target"
            android:text="@string/suite_refresh" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="360dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing_md"
            android:background="@drawable/suite_row_background"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suite_repository"
                android:textAppearance="@style/Text.MG4.SectionHeader" />
            <TextView
                android:id="@+id/suite_repository_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:text="@string/suite_loading"
                android:textAppearance="@style/Text.MG4.Body" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/suite_manual_install_help"
                android:textAppearance="@style/Text.MG4.Secondary" />
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/suite_app_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:scrollbars="vertical" />
    </LinearLayout>
</LinearLayout>
